infrastructure/kubernetes/base/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: ai-task-processing-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ritik799/ai-task-processing-platform-worker:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            exec:
              command:
                - python
                - -c
                - "import os,redis; r=redis.Redis(host=os.getenv('REDIS_HOST'),port=int(os.getenv('REDIS_PORT','6379'))); r.ping(); print('ok')"
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - python
                - -c
                - "import os,redis; r=redis.Redis(host=os.getenv('REDIS_HOST'),port=int(os.getenv('REDIS_PORT','6379'))); r.ping(); print('ok')"
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
